# kami

./: .env.example  .gitignore  KAMI_SIMULATION_SPEC.md  README.md  pyproject.toml
backend/: kami_sim.db  oriv_output.json  pyproject.toml  sim_graph.json
backend/kami_sim/: __init__.py  __main__.py  config.py  oriv_world.py  run_oriv.py  run_slice.py  slice_world.py
backend/kami_sim/agent_worker/: containment.py  prompt_builder.py  worker.py
backend/kami_sim/api/: server.py
backend/kami_sim/comms/: channels.py  inbox.py  wake_logic.py
backend/kami_sim/eventbus/: bus.py
backend/kami_sim/factstore/: models.py  tools.py
backend/kami_sim/kami_worker/: prompt_builder.py  worker.py
backend/kami_sim/kami_worker/system_prompts/: kami_system.txt
backend/kami_sim/llm/: budget.py  caching.py  client.py
backend/kami_sim/memory/: consolidator.py  episodic_store.py  insight_manager.py
backend/kami_sim/scheduler/: activity_detector.py  conflict_resolver.py  tick_scheduler.py  write_committer.py
backend/kami_sim/spatial/: graph.py
backend/kami_sim/world_builder/: build_world.py  validators.py
backend/kami_sim/world_builder/cascades/: backstory.py  decompose.py  populate.py  seed.py  social.py
backend/tests/integration/: test_slice_world.py
backend/tests/unit/: test_budget.py  test_containment.py  test_eventbus.py  test_factstore.py  test_spatial.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AgentActivityBoard.tsx  CreateSimModal.tsx  KamiGraph.tsx  (+4 more)
(+3 files in other folders)
